:refactor: refactored footer, spacing corrections

--- a/css/footer.css
+++ b/css/footer.css
@@ -5,28 +5,27 @@
     padding: 15px 0 15px 15px;
     background-color: #353535;
   }
-  footer h1
+  footer .footer-title--h1
   {
     color: white;
     font-family: 'Shrikhand';
-    font-size: 30px;
+    font-size: 20px;
     font-style: italic;
   }
-  footer ul
+  footer .footer-links-list--ul
   {
     list-style-type: none;
     padding: 0;
   }
-  footer ul li
+  footer .footer-links-list--li
   {
     color: #fff;
    font-family: 'Roboto';
     margin-bottom: 10px;
     font-weight: 500;
   }
-  footer img
+  footer .footer-icon--i
   {
-    color: #fff;
-    width: 150px;
+    margin-right: 10px;
   }
 }
